# Apollo

./: .cproject  .gitignore  .gitmodules  .project  Apollo.cbp  Apollo.depend  Apollo.layout  CMakeLists.txt  Coord.h  Entity.h  EntityArray.h  EntityList.h  Eurus.h  GnuOutput.cpp  GnuOutput.h  Memory.h  Node.cpp  Node.h  Object.cpp  Object.h  Omni.h  Operators.h  Position.h  README.md  Renderer.cpp  Renderer.h  Singleton.h  Specials.h  Templates.h  main.cpp  main.cpp.save-failed  test.json
Apollo2/: Data.h  DataCreator.h  Datatype.h  Entity.cpp  Entity.h  Process.h  SpecialEntities.h
Entities/: Basic.h  Data.cpp  Data.h  Datatype.cpp  Datatype.h  DatatypeBase.h  Entity.cpp  Entity.h  EntityBase.h  EntitySet.h  EurusSet.cpp  EurusSet.h  Future.h  GenericProcess.h  KeySet.cpp  KeySet.h  OmniSet.cpp  OmniSet.h  Packet.cpp  Packet.h  Process.cpp  Process.h  SpecialEntities.h  Tools.h  test.json
Examples/Boxes/: Box.h
Examples/Graphics/: Node.h  Renderer.cpp  Renderer.h
Include/: Apollo.h
Include/Core/: DatatypeBase.h  ProcessBase.h
Include/Particle/: ChargedParticle.cpp  ChargedParticle.h  FutureParticle.h  JsonParticle.cpp  JsonParticle.h  NullParticle.h  Particle.cpp  Particle.h  ParticleMaker.h  ParticleViewer.h  Particle_Base.h  UnchargedParticle.h
Include/SpecialEntities/: Basic.h  JsonEntity.h
Include/Templates/: BasicFunctions.h
Include/Tools/: Logger.h
Templates/: Node.h  Renderer.cpp  Renderer.h
include/: Apollo.cpp  Apollo.h
include/Core/: Base.h  ProcessBase.h
include/Entities/: Basic.h  Data.h  DataCreator.cpp  DataTuple.h  Datatype.h  (+13 more)
(+80 files in other folders)
